...
    <string name="cycle_calendar_views" translatable="false">↻</string>
    <string name="no_events">No events on this day.</string>
    <string name="refresh_calendar_fail">Could not refresh.</string>
    <string name="calendar_upcoming_date">On the %1$s.</string>
    <string name="left_arrow" translatable="false"><![CDATA[<]]></string>
    <string name="right_arrow" translatable="false"><![CDATA[>]]></string>
    <string name="pick_a_date_and_time">Pick a date and time</string>
    <string name="no_attachment">Could not find the attachment</string>

    <!-- Event creation and information popups -->
    <string name="event_creation_title">Add an event</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_text">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="event_editing_title">Edit event</string>
    <string name="confirm">Confirm</string>

    <!-- Login -->
    <string name="tag_login_activity" translatable="false">LoginActivity</string>
    <string name="tag_register_email" translatable="false">RegisterEmail</string>
    <string name="tag_login_email" translatable="false">LoginEmail</string>
    <string name="email_already_used">Email is already used.</string>
...
    <string name="email_not_valid">Email is not valid.</string>
    <string name="password_not_valid">Password is not valid.</string>
    <string name="inputs_empty">Inputs must not be empty.</string>
    <string name="signout_intent">sign_out</string>

    <!-- Attachment menu -->
    <string name="attach">Attach</string>
    <string name="show">Show</string>
    <string name="remove">Remove</string>
    <string name="three_dots">three dots</string>
    <string name="event_attachment_content_description">attachment of the event</string>

    <!-- ShopItem -->
    <string name="name">Name</string>
    <string name="unit">Unit</string>
...
