<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    >

    <Button
        android:id="@+id/event_upcoming_title"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_weight="0" />

    <TextView
        android:id="@+id/event_upcoming_date"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:textSize="16sp"/>

    <ImageButton
        android:id="@+id/event_upcoming_attach"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_weight="0"
        android:contentDescription="@string/three_dots"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/three_dots"
        android:layout_gravity="center"/>


</LinearLayout>
