...
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_screen_calendar"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintBottom_toTopOf="@+id/calendar_screen_add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_screen_year_month"
        app:layout_constraintVertical_bias="0.035"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".7"/>
...
